remove mailchimp and make copy changes

--- a/index.html
+++ b/index.html
@@ -80,9 +80,7 @@
                 <li class="nav-item">
                     <a class="nav-link page-scroll" href="#product">Product</a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link page-scroll" href="#pricing">Pricing</a>
-                </li>
+               
 
                 <!-- Dropdown Menu -->
                 <li class="nav-item dropdown">
@@ -103,28 +101,9 @@
                 </li>
             </ul>
             <div id="earlyAccessNav" class="d-flex align-items-center">
-                <button class="btn-solid-reg" id="earlyAccessButtonNav" style="padding: 1.1875rem 1.125rem;">Start
-                    building</button>
+                <a class="btn-solid-reg" id="earlyAccessButtonNav" href="https://app.cuadro.io" style="padding: 1.1875rem 1.125rem;">Start
+                    building</a>
 
-                <!-- Mailchimp Subscription Form -->
-                <div id="mc_embed_shell">
-                    <link href="//cdn-images.mailchimp.com/embedcode/classic-061523.css" rel="stylesheet"
-                        type="text/css">
-
-
-                    <form id="earlyAccessFormNav" method="POST"
-                        action="https://github.us22.list-manage.com/subscribe/post?u=c63a46fb8e27f6d05a1f683c8&amp;id=acffebec23"
-                        style="display:none;margin-left:1rem">
-                        <input type="email" name="EMAIL" id="emailNav" class="form-control"
-                            placeholder="Enter your email" required>
-                        <button type="submit" class="btn btn-solid-reg">Submit</button>
-                    </form>
-
-                    <!-- Thank You Message (hidden initially) -->
-                    <div id="thankYouMessageNav" style="display: none; margin-left: 1rem;">
-                        <p>Thank you! You've been added to the early access list.</p>
-                        <a class="btn btn-solid-reg" href="https://app.cuadro.io">Go to Site</a>
-                    </div>
                 </div>
             </div>
         </div>
@@ -137,13 +116,13 @@
         <div class="header-content">
             <div class="container">
                 <div class="row">
-                    <div class="col-lg-6">
+                    <div class="col-lg-7">
                         <div class="text-container">
-                            <h1><span class="turquoise">Make sense of data</span><br> without the hassle of mastering
+                            <h1><span class="turquoise">Build powerful charts</span><br> without the hassle of mastering
                                 Excel or complex BI tools.</h1>
-                            <p class="p-large">Effortlessly analyze, filter, compare, and share insights — all with just
+                            <p class="p-large">Effortlessly analyze, filter, compare, and share charts — all with just
                                 a few clicks.</p>
-                            <a class="btn-solid-lg page-scroll" href="#pricing">Get started (it's free) →</a>
+                            <a class="btn-solid-lg" href="https://app.cuadro.io">Get started (it's free) →</a>
 
                             <!-- Additional Content -->
                             <div class="d-flex flex-column flex-md-row align-items-center mt-3">
@@ -176,7 +155,7 @@
 
                         </div> <!-- end of text-container -->
                     </div> <!-- end of col -->
-                    <div class="col-lg-6">
+                    <div class="col-lg-5">
                         <div class="image-container pt-5">
                             <img src="images/analysis-screenshot.PNG" class="img-fluid"
                                 style="filter: brightness(1.2); border-radius: 15px; box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);">
@@ -257,7 +236,7 @@
                     <h2>Cuadro is all you need to make quick sense of your data <span class="turquoise"> without the
                             bloat.</span>
                     </h2>
-                    <p>Cuadro analyzes, compares, filters, and exports your data for you, allowing you to focus your
+                    <p>Cuadro analyzes, compares, filters, and exports your charts for you, allowing you to focus your
                         time on drawing insights and making decisions.</p>
                 </div> <!-- end of text-container -->
             </div> <!-- end of col -->
@@ -310,7 +289,7 @@
                 </div> <!-- end of col -->
             </div> <!-- end of row -->
             <div class="row">
-                <div class="col-lg-12">
+                <div class="col-lg-12 text-center">
 
                     <!-- Video Preview -->
                     <div class="image-container">
@@ -325,100 +304,15 @@
                         </div> <!-- end of video-wrapper -->
                     </div> <!-- end of image-container -->
                     <!-- end of video preview -->
+                        
+                    <a class="btn-solid-lg" href="https://app.cuadro.io">Get started today</a>
+                    <p>It's free!</p>
+
                 </div> <!-- end of col -->
             </div> <!-- end of row -->
         </div> <!-- end of container -->
     </div> <!-- end of basic-3 -->
     <!-- end of video -->
-
-    <!-- pricing -->
-    <div id="pricing" class="cards-2 ">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12">
-                    <h2>Pricing</h2>
-
-                </div> <!-- end of col -->
-            </div> <!-- end of row -->
-            <div class="row">
-                <div class="col-lg-12">
-
-                    <!-- Card -->
-                    <div class="card">
-                        <div class="label">
-                            <p class="tag">Limited time</p>
-                        </div>
-                        <div class="card-body">
-                            <div class="card-title">$0</div>
-                            <p>We're offering free access to our Beta.
-                                Just enter your email below to get started.</p>
-                            <!-- Early Access Form -->
-
-
-                            <!-- Mailchimp Subscription Form -->
-                            <div id="mc_embed_shell">
-                                <link href="//cdn-images.mailchimp.com/embedcode/classic-061523.css" rel="stylesheet"
-                                    type="text/css">
-
-                                <form id="earlyAccessForm" method="POST"
-                                    action="https://github.us22.list-manage.com/subscribe/post?u=c63a46fb8e27f6d05a1f683c8&amp;id=acffebec23"
-                                    target="_blank">
-                                    <div class="form-group">
-                                        <input type="email" name="EMAIL" id="email" class="form-control"
-                                            placeholder="Enter your email" required>
-                                    </div>
-                                    <button type="submit" class="btn btn-solid-reg">Start building</button>
-                                </form>
-
-                                <!-- Thank You Message & Redirect Button (optional, for success feedback) -->
-                                <div id="thankYouMessage" style="display: none;">
-                                    <p>Thank you! You've been added to the early access list.</p>
-                                    <a class="btn btn-solid-reg" href="https://app.cuadro.io">Go to Site</a>
-                                </div>
-
-                            </div>
-
-                            <ul class="list-unstyled li-space-lg">
-                                <li class="media">
-                                    <i class="fas fa-check"></i>
-                                    <div class="media-body">Easy CSV Upload</div>
-                                </li>
-
-                                <li class="media">
-                                    <i class="fas fa-check"></i>
-                                    <div class="media-body">Various analysis types</div>
-                                </li>
-                                <li class="media">
-                                    <i class="fas fa-check"></i>
-                                    <div class="media-body">Generate charts in bulk</div>
-                                </li>
-                                <li class="media">
-                                    <i class="fas fa-check"></i>
-                                    <div class="media-body">Advanced visualization tools</div>
-                                </li>
-                                <li class="media">
-                                    <i class="fas fa-check"></i>
-                                    <div class="media-body">Save to bookmarks dashboard</div>
-                                </li>
-                                <li class="media">
-                                    <i class="fas fa-check"></i>
-                                    <div class="media-body">Export to PDF and PPT</div>
-                                </li>
-                            </ul>
-
-
-
-
-                        </div>
-                    </div> <!-- end of card -->
-                    <!-- end of card -->
-
-
-                </div> <!-- end of col -->
-            </div> <!-- end of row -->
-        </div> <!-- end of container -->
-    </div> <!-- end of cards-2 -->
-    <!-- end of pricing -->
 
     <!-- Testimonials -->
     <div class="slider-2">
@@ -529,7 +423,7 @@
                     <!-- end of team-member -->
                     <p class="p-heading p-large">In nearly 10 years of building software, I’ve seen time and time again
                         how many people
-                        struggle with data tools like Excel. My mission is to make data analysis simple and accessible
+                        struggle with data tools like Excel. My mission in building Cuadro is to make data analysis simple and accessible
                         to everyone, so anyone—no matter their skill level—can confidently understand and use their data
                         without feeling overwhelmed.</p>
 
