--- a/index.html
+++ b/index.html
@@ -20,12 +20,13 @@
     <meta name="author" content="Cuadro">
 
     <!-- OG Meta Tags to improve the way the post looks when you share the page on LinkedIn, Facebook, Google+ -->
-    <meta property="og:site_name" content="" /> <!-- website name -->
-    <meta property="og:site" content="" /> <!-- website link -->
-    <meta property="og:title" content="" /> <!-- title shown in the actual shared post -->
-    <meta property="og:description" content="" /> <!-- description shown in the actual shared post -->
-    <meta property="og:image" content="" /> <!-- image link, make sure it's jpg -->
-    <meta property="og:url" content="" /> <!-- where do you want your post to link to -->
+    <meta property="og:site_name" content="Cuadro.io" /> <!-- website name -->
+    <meta property="og:site" content="https://cuadro.io" /> <!-- website link -->
+    <meta property="og:title" content="Cuadro" /> <!-- title shown in the actual shared post -->
+    <meta property="og:description" content="Build charts in seconds
+    without the hassle of mastering Excel or complex BI tools." /> <!-- description shown in the actual shared post -->
+    <meta property="og:image" content="https://cuadro.io/images/analysis-screenshot.jpg" /> <!-- image link, make sure it's jpg -->
+    <meta property="og:url" content="https://cuadro.io" /> <!-- where do you want your post to link to -->
     <meta property="og:type" content="article" />
 
     <!-- Website Title -->
@@ -118,7 +119,7 @@
                 <div class="row">
                     <div class="col-lg-7">
                         <div class="text-container">
-                            <h1><span class="turquoise">Build powerful charts</span><br> without the hassle of mastering
+                            <h1><span class="turquoise">Build charts in seconds</span><br> without the hassle of mastering
                                 Excel or complex BI tools.</h1>
                             <p class="p-large">Effortlessly analyze, filter, compare, and share charts — all with just
                                 a few clicks.</p>
@@ -392,7 +393,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
-                    <h2>Hey, I'm Matias!</h2>
+                    <h2>👋 Hey, I'm Matias!</h2>
                 </div> <!-- end of col -->
             </div> <!-- end of row -->
             <div class="row">
