--- a/index.html
+++ b/index.html
@@ -303,7 +303,8 @@
 
                         <!-- Put this wherever you would like your player to appear -->
                         <img style="width: 100%; margin: auto; display: block;" class="vidyard-player-embed"
-                            src="https://play.vidyard.com/cmqrwGkL28eSd6quCYPdSD.jpg" data-uuid="cmqrwGkL28eSd6quCYPdSD"
+                        src="https://play.vidyard.com/TMoi1oW9AMxaHT7xN4Zr8k.jpg"
+                        data-uuid="TMoi1oW9AMxaHT7xN4Zr8k"
                             data-v="4" data-type="inline" />
                        
                     </div> <!-- end of image-container -->
