update demo video

--- a/index.html
+++ b/index.html
@@ -303,10 +303,12 @@
 
                         <!-- Put this wherever you would like your player to appear -->
                         <img style="width: 100%; margin: auto; display: block;" class="vidyard-player-embed"
-                        src="https://play.vidyard.com/TMoi1oW9AMxaHT7xN4Zr8k.jpg"
-                        data-uuid="TMoi1oW9AMxaHT7xN4Zr8k"
+                        src="https://play.vidyard.com/jZbeVsfnaMDCYBQzicDSNs.jpg"
+  data-uuid="jZbeVsfnaMDCYBQzicDSNs"
                             data-v="4" data-type="inline" />
                        
+
+                            
                     </div> <!-- end of image-container -->
                     <!-- end of video preview -->
 
